# app/Http/Resources/ClubResource.php
@@ -5,6 +5,49 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+/**
+ * @OA\Schema(
+ *      title="ClubResource",
+ *      description="Full resource of Club object",
+ *      type="object",
+ *      @OA\Property(
+ *          property="name",
+ *          type="string",
+ *          description="Club name",
+ *          example="Liget Budapest",
+ *      ),
+ *      @OA\Property(
+ *          property="location",
+ *          type="string",
+ *          description="The location of the club",
+ *          example="Budapest (Example street)",
+ *      ),
+ *      @OA\Property(
+ *          property="facebookUrl",
+ *          type="string",
+ *          description="Facebook page of the club",
+ *          example="https://facebook.com/club",
+ *      ),
+ *      @OA\Property(
+ *          property="instagramTag",
+ *          type="string",
+ *          description="Instagram tag",
+ *          example="@clubbudapest",
+ *      ),
+ *      @OA\Property(
+ *          property="instagramUrl",
+ *          type="string",
+ *          description="Instagram url",
+ *          example="https://instagram.com/clubbudapest",
+ *      ),
+ *      @OA\Property(
+ *          property="description",
+ *          type="string",
+ *          description="A custom description",
+ *          example="This place is very solid. Might be coming back here idk..",
+ *      ),
+ * )
+ */
 class ClubResource extends JsonResource
 {
     public function toArray(Request $request): array
